# al-tabi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Full_Marketing_Database_DDL.sql  PATTERN_DEVELOPMENT_GUIDE.md  README.md  RELEASE.md  reembed_ddl.py  انفنيتي ddl.sql  دليل_حل_مشكلة_الاتصال.md
reports-app/: AGENTS.md  AGENT_CHANGELOG.md  AGENT_FAST_MEMORY.md  AGENT_InfinityRetailDB.md  AGENT_Marketing2026.md  AI_SYSTEM_PROMPT.md  DATABASE_NOTES.md  DATABASE_VIEWS.md  DESIGN_SYSTEM_BRIEF.md  ERP_ARCHITECTURE.md  INFINITY_DATABASE_NOTES.md  INFINITY_DATABASE_VIEWS.md  INFINITY_PRODUCT_SCHEMA.md  PATTERN_CATALOG.yaml  PRODUCT_SCHEMA.md  QUERY_PATTERNS.md  README.md  _test_supplier.sql  active_shortage_tracking.sql  debts_tracking.sql  design-fetch.json  index.html  last_sale_day_by_employee.sql  monthly_expenses_tracking.sql  package-lock.json  package.json  shortage_tracking.sql  smart_purchase_order.sql  sql1.sql  sql2.sql  supabase-recipes-expansion.sql  supplier_price_comparison.sql  tmp_inv2.txt  tmp_inv3.txt  tmp_inv4.txt  tmp_items2.txt  (+6 more)
reports-app/src-tauri/: Cargo.toml  al-tabi.key.pub  build.rs  tauri.conf.json
reports-app/src-tauri/capabilities/: default.json
reports-app/src-tauri/icons/: icon.icns
reports-app/src-tauri/src/: agent_content_sync.rs  agent_error_log.rs  agent_memory.rs  agent_tools.rs  ai_agent.rs  erp_adapters.rs  erp_profile.rs  excel_generator.rs  gotenberg.rs  infinity_inventory_sql.rs  lib.rs  main.rs  pattern_catalog.rs  pdf_generator.rs  pharmacy_share.rs  pos_sale.rs  rig_provider.rs  scheduler.rs  supabase_config.rs  telegram.rs
(+158 files in other folders)
