[package]
name = "reports-app"
version = "0.1.24"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reports_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tiberius = { version = "0.12", features = ["sql-browser-tokio", "chrono", "rust_decimal"] }
rust_decimal = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "multipart"] }
csv = "1.3"
printpdf = "0.5"
unicode-bidi = "0.3"
rust_xlsxwriter = "0.95.0"
rusqlite = { version = "0.32", features = ["bundled"] }
